--- a/index.html
+++ b/index.html
@@ -1,165 +1,201 @@
-<!--
-===============================================================================
-
-    LICENSE NOTICE
-
-    This website is open source and free to use under the GNU General Public License v3 (GPLv3).
-    You may copy, modify, and distribute this code as long as you comply with the GPLv3 terms.
-    See LICENSE.md or https://www.gnu.org/licenses/gpl-3.0.html for details.
-
-    Some code on this site was generated with the help of AI (GitHub Copilot).
-    See https://github.com/features/copilot for more information about AI-generated code.
-
-===============================================================================
--->
-
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>portfolio site | karlsune</title>
-
-    <!-- links -->
-    <link rel="icon" href="./icon/icon.ico" />
-    <link rel="stylesheet" type="text/css" href="./css/styles.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-
-  <body>
-    <!--
-        HEADER: Contains navigation, theme toggle, and menu button for mobile. test
-    -->
-    <header>
-      <!-- Menu toggle button for mobile navigation -->
-      <button
-        class="menu-toggle"
-        aria-label="Open main menu"
-        aria-controls="main-nav"
-        aria-expanded="false"
-      >
-        &#9776;
-        <!--hamburger menu-->
-      </button>
-      <!-- Main navigation with accessible landmark and id -->
-      <nav id="main-nav" aria-label="Main site navigation">
-        <a href="#about">#about</a>
-        <a href="#education">#education</a>
-        <a href="#stats">#stats</a>
-        <a href="#occupation">#occupation</a>
-        <a href="#skills">#skills</a>
-      </nav>
-    </header>
-
-    <!--
-        MAIN: Contains the site title, animated subtitle, and all main sections.
-    -->
-    <main>
-      <div class="site-title">karlsune's portfolio site.</div>
-      <div class="site-subtitle" id="site-subtitle" aria-live="polite">
-        web developer
+<head>
+  <meta charset="UTF-8">
+  <title>Call Soon Services AB</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Reliable and affordable yard work, handyman, and personal services in Tynningö.">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <style>
+    :root {
+      --primary: #1976d2;
+      --secondary: #e3f0ff;
+      --accent: #388e3c;
+      --bg: #f8fafc;
+      --card-bg: #fff;
+      --text: #222;
+      --muted: #666;
+      --radius: 14px;
+      --shadow: 0 2px 12px rgba(25, 118, 210, 0.08);
+    }
+    html, body {
+      margin: 0;
+      padding: 0;
+      background: var(--bg);
+      color: var(--text);
+      font-family: 'Segoe UI', 'Liberation Sans', Arial, sans-serif;
+      min-height: 100vh;
+    }
+    header {
+      background: var(--primary);
+      color: #fff;
+      padding: 2rem 1rem 1.2rem 1rem;
+      text-align: center;
+      border-radius: 0 0 var(--radius) var(--radius);
+      box-shadow: var(--shadow);
+    }
+    header h1 {
+      margin: 0 0 0.5rem 0;
+      font-size: 2.2rem;
+      letter-spacing: 1px;
+    }
+    header p {
+      margin: 0.2rem 0 0 0;
+      font-size: 1.1rem;
+      color: #e3f0ff;
+    }
+    nav {
+      margin: 1.5rem 0 0 0;
+      display: flex;
+      justify-content: center;
+      gap: 1.5rem;
+      flex-wrap: wrap;
+    }
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: 500;
+      padding: 0.4rem 1rem;
+      border-radius: var(--radius);
+      transition: background 0.2s;
+    }
+    nav a:hover, nav a:focus {
+      background: #1565c0;
+    }
+    main {
+      max-width: 800px;
+      margin: 2.5rem auto 2rem auto;
+      padding: 0 1rem;
+    }
+    section {
+      background: var(--card-bg);
+      border-radius: var(--radius);
+      box-shadow: var(--shadow);
+      margin-bottom: 2rem;
+      padding: 2rem 1.5rem;
+    }
+    section h2 {
+      color: var(--primary);
+      margin-top: 0;
+      font-size: 1.4rem;
+      letter-spacing: 1px;
+    }
+    ul, ol {
+      padding-left: 1.2rem;
+    }
+    .contact-card {
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem;
+      margin-bottom: 1.5rem;
+      font-size: 1.05rem;
+    }
+    .contact-card span {
+      color: var(--muted);
+    }
+    .value-props {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+      gap: 1rem;
+      margin: 1.2rem 0;
+    }
+    .value-prop {
+      background: var(--secondary);
+      border-radius: var(--radius);
+      padding: 1rem;
+      color: var(--primary);
+      font-weight: 500;
+      box-shadow: 0 1px 4px #1976d210;
+      text-align: center;
+    }
+    .footer {
+      text-align: center;
+      color: var(--muted);
+      font-size: 0.95rem;
+      padding: 1.5rem 0 0.7rem 0;
+      background: var(--secondary);
+      border-radius: var(--radius) var(--radius) 0 0;
+      margin-top: 2rem;
+    }
+    @media (max-width: 600px) {
+      header h1 { font-size: 1.3rem; }
+      section { padding: 1.2rem 0.7rem; }
+      main { padding: 0 0.2rem; }
+      nav { gap: 0.5rem; }
+      .value-props { grid-template-columns: 1fr; }
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Call Soon Services AB</h1>
+    <p>Reliable yard work, handyman, and personal services in Tynningö</p>
+    <nav>
+      <a href="#about">Om oss</a>
+      <a href="#services">Tjänster</a>
+      <a href="#market">Marknad</a>
+      <a href="#contact">Kontakt</a>
+    </nav>
+    <button id="lang-toggle" style="margin-top:1rem; padding:0.4rem 1rem; border-radius:var(--radius); border:none; background:var(--accent); color:#fff; font-weight:500; cursor:pointer;">
+      English
+    </button>
+  </header>
+  <main>
+    <section id="about">
+      <h2>Om oss</h2>
+      <div class="contact-card">
+        <div><strong>Telefon:</strong> <a href="tel:+46723179838">+46 723 - 17 98 38</a></div>
+        <div><strong>E-post:</strong> <a href="mailto:lillerik.sund@gmail.com">lillerik.sund@gmail.com</a></div>
+        <div><strong>Adress:</strong> Juliusbergsvägen 11, 134 92, Tynningö, Sverige</div>
+        <span>Org.nr: Call Soon Services AB / Karl Sune Tjänster AB</span>
       </div>
-
-
-            <!--
-        GitHub Profile Stats Embed:
-        This section displays a dynamic card with my GitHub stats.
-        (https://github.com/anuraghazra/github-readme-stats)
-        -->
-
-      <section id="stats">
-        <a
-          href="https://github.com/karlsune"
-          target="_blank"
-          rel="noopener"
-        >
-          <img
-            src="https://github-readme-stats.vercel.app/api?username=karlsune&show_icons=true&theme=default"
-            alt="GitHub stats for karlsune"
-            style="max-width: 100%; display: block; margin: 0 auto"
-          />
-        </a>
-      </section>
-
-      <!--
-        projects section:
-        PROJECTS SECTION:
-        This section showcases links to various projects, including subpages and external resources. -->
-      <section id="projects">
-        <h2>#projects</h2>
-        <p><a href="karlsune.org">this page</a></p>
-        <p><a href="game/game.html">this matter.js animated page</a></p>
-        <p><a href="null">UNDER CONSTRUCTION</a></p>
-        <p><a href="https://github.com/karlsune">my github repositories</a></p>
-        <p><a href="https://www.kth.se/en">kth student portal</a></p>
-      </section>
-
-      <section id="about">
-        <h2>#about</h2>
-        <p>karlsune</p>
-        <p>level: 26</p>
-        <p>student@<a href="https://www.kth.se/en">kth</a></p>
-      </section>
-
-      <section id="education">
-        <h2>#education</h2>
-        <p>high school diploma</p>
-      </section>
-
-
-
-      <section id="occupation">
-        <h2>#occupation</h2>
-        <p>student</p>
-      </section>
-
-      <section id="skills">
-        <h2>#skills</h2>
-        <ul class="skills-list">
-          <li>html</li>
-          <li>css</li>
-          <li>js</li>
-          <li>linux</li>
-          <li>windows</li>
-          <li>git</li>
-          <li>github</li>
-          <li>gaming</li>
-          <li>web design</li>
-        </ul>
-      </section>
-    </main>
-
-    <!--
-        FOOTER: Contains external links and a "top" link.
-    -->
-    <footer>
-      <section id="links">
-        <p><a href="https://github.com/karlsune">github</a></p>
-        <p><a href="https://www.linkedin.com/in/karlsune/">linkedin</a></p>
-        <p><a href="#top">top</a></p>
-      </section>
-    </footer>
-
-    <!-- Back to top button -->
-    <button id="back-to-top" aria-label="Back to top">⬆️</button>
-
-    <!--
-        JAVASCRIPT: Handles mobile menu, data storage, and animated subtitle.
-    -->
-    <script src="./script/subtitleRender.js"></script>
-    <script src="./script/array.js"></script>
-    <script defer src="./script/main.js"></script>
-
-    <noscript>
-      <div id="noScriptWarn">
-        <strong>Notice:</strong> This site works best with JavaScript
-        enabled.<br />
-        Some features require JavaScript.
+      <p>
+        Vi erbjuder pålitliga och prisvärda tjänster inom trädgårdsarbete, hantverk och personlig träning till privatpersoner och företag i Tynningö med omnejd. Vårt mål är att leverera kundnöjdhet i varje uppdrag.
+      </p>
+    </section>
+    <section id="services">
+      <h2>Våra tjänster</h2>
+      <div class="value-props">
+        <div class="value-prop">Trädgårdsarbete<br><span style="font-weight:400;color:var(--muted);font-size:0.98em;">Gräsklippning, krattning, trimning, plantering</span></div>
+        <div class="value-prop">Hantverk<br><span style="font-weight:400;color:var(--muted);font-size:0.98em;">Reparationer, målning, montering, städning</span></div>
+        <div class="value-prop">Personlig träning<br><span style="font-weight:400;color:var(--muted);font-size:0.98em;">Träning, hälsa, massage (framtid)</span></div>
+        <div class="value-prop">Nöjd kund-garanti</div>
+        <div class="value-prop">Helt svenskägt & drivet</div>
+        <div class="value-prop">Snabb respons & pålitlig service</div>
       </div>
-    </noscript>
-  </body>
+      <ul>
+        <li>Timdebitering & paketpriser</li>
+        <li>Abonnemang för regelbundet underhåll</li>
+        <li>Säsongserbjudanden och lojalitetsprogram</li>
+      </ul>
+    </section>
+    <section id="market">
+      <h2>Marknad & Differentiering</h2>
+      <ul>
+        <li>Vi vänder oss till villaägare, äldre, yrkesverksamma, småföretagare och fastighetsägare inom 25 km från Tynningö.</li>
+        <li>Personlig, lokal och pålitlig service med nöjd kund-garanti.</li>
+        <li>Utmärkande marknadsföring och rekommendationer.</li>
+        <li>Flexibel, säsongsanpassad verksamhet för maximal nytta och minskade kostnader.</li>
+        <li>Fokus på kärnkompetens och kundrelationer.</li>
+      </ul>
+    </section>
+    <section id="contact">
+      <h2>Kontakt & Investering</h2>
+      <p>
+        Intresserad av våra tjänster eller av att investera i ett växande lokalt företag? Kontakta oss för mer information eller för att diskutera samarbetsmöjligheter.
+      </p>
+      <ul>
+        <li><strong>Telefon:</strong> <a href="tel:+46723179838">+46 723 - 17 98 38</a></li>
+        <li><strong>E-post:</strong> <a href="mailto:lillerik.sund@gmail.com">lillerik.sund@gmail.com</a></li>
+        <li><strong>Adress:</strong> Juliusbergsvägen 11, 134 92, Tynningö, Sverige</li>
+      </ul>
+      <p style="color:var(--muted);font-size:0.98em;">
+        <strong>Investeringsmöjlighet:</strong> Vi söker 50 000 SEK i lånefinansiering (0% ränta, 0% avgifter, 0% återbetalning första 12 månaderna). Investerare får 25% ägande, styrelseplats och del av vinsten. Kontakta oss för mer information.
+      </p>
+    </section>
+  </main>
+  <div class="footer">
+    &copy; 2025 Karl Sundström / Call Soon Services AB. All rights reserved.
+  </div>
+</body>
 </html>
